add github pages deploy step

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,3 +30,6 @@ jobs:
         run: python naptan.py
 
       - uses: actions/upload-pages-artifact@v1
+
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
